--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,8 @@
                         <div></div>
                     </li>
                     <li>
-                        <a class="fa fa-moon-o" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
+                        <a class="fa fa-moon-o prevent-select nav-links" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
+                        <div></div>
                     </li>
                 </ul>
                 <div class="DropDown prevent-select">☰</div>
@@ -86,27 +87,27 @@
             <h1 id="2025-2026">2025-2026</h1>
             <div class="segment themeChangeProjects">
                 <div class="container-wrapper" data-location="project-01" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-01/maintenance-2422171_1280.jpg)"></div>
                     <h2>PROJECT #1 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-02" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-02/under-construction-4011849_1280.png)"></div>
                     <h2>PROJECT #2 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-03" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-03/under-construction-2891888_1280.jpg)"></div>
                     <h2>PROJECT #3 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-02" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-02/under-construction-4011849_1280.png)"></div>
                     <h2>PROJECT #2 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-03" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-03/under-construction-2891888_1280.jpg)"></div>
                     <h2>PROJECT #3 NAME</h2>
                 </div>
             </div>
@@ -114,51 +115,51 @@
             <h1 id="2024-2025">2024-2025</h1>
             <div class="segment themeChangeProjects">
                 <div class="container-wrapper" data-location="project-01" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-01/maintenance-2422171_1280.jpg)"></div>
                     <h2>PROJECT #1 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-02" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-02/under-construction-4011849_1280.png)"></div>
                     <h2>PROJECT #2 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-03" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-03/under-construction-2891888_1280.jpg)"></div>
                     <h2>PROJECT #3 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-02" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-02/under-construction-4011849_1280.png)"></div>
                     <h2>PROJECT #2 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-03" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-03/under-construction-2891888_1280.jpg)"></div>
                     <h2>PROJECT #3 NAME</h2>
                 </div>
                 <div class="container-wrapper" data-location="project-01" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-01/maintenance-2422171_1280.jpg)"></div>
                     <h2>PROJECT #1 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-02" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-02/under-construction-4011849_1280.png)"></div>
                     <h2>PROJECT #2 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-03" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-03/under-construction-2891888_1280.jpg)"></div>
                     <h2>PROJECT #3 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-02" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-02/under-construction-4011849_1280.png)"></div>
                     <h2>PROJECT #2 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-03" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-03/under-construction-2891888_1280.jpg)"></div>
                     <h2>PROJECT #3 NAME</h2>
                 </div>
             </div>
@@ -166,17 +167,17 @@
             <h1 id="2023-2024">2023-2024</h1>
             <div class="segment themeChangeProjects">
                 <div class="container-wrapper" data-location="project-01" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-01/maintenance-2422171_1280.jpg)"></div>
                     <h2>PROJECT #1 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-02" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-02/under-construction-4011849_1280.png)"></div>
                     <h2>PROJECT #2 NAME</h2>
                 </div>
 
                 <div class="container-wrapper" data-location="project-03" onclick="link(this)">
-                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <div class="image-container" style="background-image: url(projects/project-03/under-construction-2891888_1280.jpg)"></div>
                     <h2>PROJECT #3 NAME</h2>
                 </div>
             </div>
