--- a/projects/project-02/project-02.html
+++ b/projects/project-02/project-02.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="../JS.js"></script>
+    <script src="../../JS.js"></script>
     <meta charset="UTF-8">
     <title>ФИНКИ</title>
-    <link rel="stylesheet" href="../styles/stylesheet.css">
-    <link rel="stylesheet" href="../styles/mainStyleSheet.css">
+    <link rel="stylesheet" href="../../styles/stylesheet.css">
+    <link rel="stylesheet" href="../../styles/mainStyleSheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -15,28 +15,29 @@
     <div class="NavBarContainer">
         <div class="logo">
             <div>
-                <a href="https://ukim.edu.mk"><img class="prevent-select" src="../images-other/Kiril.metodij.png"></a>
+                <a href="https://ukim.edu.mk"><img class="prevent-select" src="../../images-other/Kiril.metodij.png"></a>
             </div>
             <div class="FinkiLogo">
-                <a href="https://www.finki.ukim.mk/mk"><img class="prevent-select" src="../images-other/finki_newlogo_a1_mk.png"></a>
+                <a href="https://www.finki.ukim.mk/mk"><img class="prevent-select" src="../../images-other/finki_newlogo_a1_mk.png"></a>
             </div>
         </div>
         <div class="NavBarRight">
             <ul class="NavBarLinks themeChangeNormal">
                 <li>
-                    <a class="prevent-select nav-links themeChangeNormal" href="../index.html">Дома</a>
+                    <a class="prevent-select nav-links themeChangeNormal" href="../../index.html">Дома</a>
                     <div></div>
                 </li>
                 <li>
-                    <a class="prevent-select nav-links themeChangeNormal" href="../projects.html">Проекти</a>
+                    <a class="prevent-select nav-links themeChangeNormal" href="../../projects.html">Проекти</a>
                     <div></div>
                 </li>
                 <li>
-                    <a class="prevent-select nav-links themeChangeNormal" href="../staff.html">Кадар</a>
+                    <a class="prevent-select nav-links themeChangeNormal" href="../../staff.html">Кадар</a>
                     <div></div>
                 </li>
                 <li>
-                    <a class="fa fa-moon-o" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
+                    <a class="fa fa-moon-o prevent-select nav-links" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
+                    <div></div>
                 </li>
             </ul>
             <div class="DropDown prevent-select">☰</div>
@@ -63,7 +64,7 @@
         </p>
 
         <div>
-            <img src="../images-other/is-slika2.jpg">
+            <img src="../../images-other/is-slika2.jpg">
             <p>Слика 1 - Сензори и апликација во рамки на проектот SIARS</p>
         </div>
     </div>
@@ -72,13 +73,13 @@
         <div class="image-stack-container">
             <div class="image-wrapper-group">
                 <div class="image-wrapper ">
-                    <img src="../images-other/is-picture1.jpg" alt="Image 1">
+                    <img src="../../images-other/is-picture1.jpg" alt="Image 1">
                 </div>
                 <div class="image-wrapper ">
-                    <img src="../images-other/is-picture3.jpg" alt="Image 2">
+                    <img src="../../images-other/is-picture3.jpg" alt="Image 2">
                 </div>
                 <div class="image-wrapper ">
-                    <img src="../images-other/ispicture4.jpg" alt="Image 3">
+                    <img src="../../images-other/ispicture4.jpg" alt="Image 3">
                 </div>
             </div>
 
@@ -121,9 +122,9 @@
     <div class="ExtraInfo">
         <div class="orientation">
             <div class="EndCardLinks">
-                <a class="prevent-select end-card-links" href="../index.html">Дома</a>
-                <a class="prevent-select end-card-links" href="../projects.html">Проекти</a>
-                <a class="prevent-select end-card-links" href="../staff.html">Кадар</a>
+                <a class="prevent-select end-card-links" href="../../index.html">Дома</a>
+                <a class="prevent-select end-card-links" href="../../projects.html">Проекти</a>
+                <a class="prevent-select end-card-links" href="../../staff.html">Кадар</a>
             </div>
 
             <div class="CreatorLinks">
