--- a/staff.html
+++ b/staff.html
@@ -36,7 +36,8 @@
                         <div></div>
                     </li>
                     <li>
-                        <a class="fa fa-moon-o" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
+                        <a class="fa fa-moon-o prevent-select nav-links" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
+                        <div></div>
                     </li>
                 </ul>
                 <div class="DropDown prevent-select">☰</div>
