--- a/projects/project-01/project-01.html
+++ b/projects/project-01/project-01.html
@@ -5,142 +5,112 @@
     <meta charset="UTF-8">
     <title>ФИНКИ</title>
     <link rel="stylesheet" href="../../styles/stylesheet.css">
-    <link rel="stylesheet" href="../../styles/mainStyleSheet.css">
+    <link rel="stylesheet" href="../../styles/projectStyleSheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body class="themeChangeNormal">
-<!--Nav bar with links and dropdown capability-->
-<div class="NavBar themeChangeNormal">
-    <div class="NavBarContainer">
-        <div class="logo">
+    <!--Nav bar with links and dropdown capability-->
+    <div class="NavBar themeChangeNormal">
+        <div class="NavBarContainer">
+            <div class="logo">
+                <div>
+                    <a href="https://ukim.edu.mk"><img class="prevent-select" src="../../images-other/Kiril.metodij.png"></a>
+                </div>
+                <div class="FinkiLogo">
+                    <a href="https://www.finki.ukim.mk/mk"><img class="prevent-select" src="../../images-other/finki_newlogo_a1_mk.png"></a>
+                </div>
+            </div>
+            <div class="NavBarRight">
+                <ul class="NavBarLinks themeChangeNormal">
+                    <li>
+                        <a class="prevent-select nav-links themeChangeNormal" href="../../index.html">Дома</a>
+                        <div></div>
+                    </li>
+                    <li>
+                        <a class="prevent-select nav-links themeChangeNormal" href="../../projects.html">Проекти</a>
+                        <div></div>
+                    </li>
+                    <li>
+                        <a class="prevent-select nav-links themeChangeNormal" href="../../staff.html">Кадар</a>
+                        <div></div>
+                    </li>
+                    <li>
+                        <a class="fa fa-moon-o prevent-select nav-links" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
+                        <div></div>
+                    </li>
+                </ul>
+                <div class="DropDown prevent-select">☰</div>
+            </div>
+        </div>
+    </div>
+    <hr>
+
+    <!--Main body content, to contain all the information-->
+    <div class="MainBody themeChangeNormal">
+        <div class="Title">
+            <H2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laudantium.</H2>
+        </div>
+        <div class="project-segment-one-temp1">
             <div>
-                <a href="https://ukim.edu.mk"><img class="prevent-select" src="../../images-other/Kiril.metodij.png"></a>
+                <img src="maintenance-2422171_1280.jpg">
             </div>
-            <div class="FinkiLogo">
-                <a href="https://www.finki.ukim.mk/mk"><img class="prevent-select" src="../../images-other/finki_newlogo_a1_mk.png"></a>
+            <div class="Paragraph">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque iste natus non optio quasi suscipit. Ad alias aperiam, asperiores beatae consectetur consequuntur debitis dignissimos dolor ducimus earum ex, explicabo fugit impedit iste labore laboriosam molestiae nam nobis nostrum repellendus, rerum soluta totam ullam veniam voluptatum. Adipisci porro, quasi! Ab consequuntur dolor error pariatur placeat porro quod reiciendis ullam! Adipisci aliquid aut cupiditate debitis dolor, dolorem eum harum necessitatibus quaerat reprehenderit temporibus unde veritatis vitae. Cum explicabo illo nemo neque obcaecati odit quo temporibus voluptate? Ab aperiam aut consequatur dolores doloribus dolorum ea eaque, error esse est eveniet expedita fuga in laudantium magnam nihil officia optio, quaerat quibusdam quisquam ratione repudiandae veritatis vitae. Dolorem eius fugiat magnam minus sequi! Aperiam consectetur corporis, deserunt dignissimos dolorem, doloremque eius eos explicabo facere fugiat illum laudantium nostrum pariatur praesentium quasi temporibus tenetur? Aliquid, perferendis quibusdam. Aliquid, aperiam architecto autem dicta dolorem dolores esse et exercitationem explicabo facere facilis fuga fugit, impedit ipsam laboriosam laborum maxime neque non obcaecati odit pariatur perspiciatis praesentium quam quisquam quos ratione recusandae reiciendis similique suscipit tempora unde voluptas, voluptatem voluptatibus? Ab animi corporis deleniti dolorem doloribus eligendi hic illo, impedit molestiae necessitatibus non nostrum praesentium quod rem sed ullam?</p>
             </div>
         </div>
-        <div class="NavBarRight">
-            <ul class="NavBarLinks themeChangeNormal">
-                <li>
-                    <a class="prevent-select nav-links themeChangeNormal" href="../../index.html">Дома</a>
-                    <div></div>
-                </li>
-                <li>
-                    <a class="prevent-select nav-links themeChangeNormal" href="../../projects.html">Проекти</a>
-                    <div></div>
-                </li>
-                <li>
-                    <a class="prevent-select nav-links themeChangeNormal" href="../../staff.html">Кадар</a>
-                    <div></div>
-                </li>
-                <li>
-                    <a class="fa fa-moon-o prevent-select nav-links" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
-                    <div></div>
-                </li>
-            </ul>
-            <div class="DropDown prevent-select">☰</div>
+        <div class="project-segment-two-temp1">
+            <div>
+                <img src="maintenance-2422171_1280.jpg">
+            </div>
+            <div class="Paragraph">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolore magni sequi sint voluptatem! Accusantium ad asperiores commodi dolore dolorum, expedita explicabo fugiat, illo inventore laudantium nesciunt nostrum odit officia optio pariatur porro temporibus veniam! Adipisci aspernatur, consectetur doloribus eius expedita illum labore laboriosam laborum, nam obcaecati quaerat quas ratione. Aut debitis ipsam itaque. Aliquam aliquid aut autem distinctio dolor dolorum, eius, est fugiat ipsum magni maiores numquam officia quod sequi similique sit tempora ullam velit veniam voluptatibus? Commodi eaque, ex expedita ipsa itaque maiores natus nemo quam temporibus voluptas. Assumenda at excepturi illo laudantium maxime nemo non quam voluptatibus?</p>
+            </div>
         </div>
-    </div>
-</div>
-<hr>
-
-<!--Main body content, to contain all the information-->
-<div class="MainBody themeChangeNormal">
-    <div class="main-segment-one">
-        <h2 class="Headline">
-            ПРОЕКТИ ПО ПРЕДМЕТОТ <b>ИНТЕЛИГЕНТНИ СИСТЕМИ</b>
-        </h2>
-
-        <p class="Paragraph ">
-            Лабораторијата за интелигентни системи започна со работа во 2009 година на Институтот за Информатика, при Природно - математичкиот факултет во Скопје. Основачи на лабораторијата се проф. Невена Ацковска и проф. Ана Мадевска Богданова. Во 2011 година, при основањето на Факултетот за Информатички науки и компјутерско инженерство, лабораторијата за интелигентни системи стана дел од оваа престижна институција. Лабораторијата располага со повеќе роботи , голем број на сензори, актуатори, компјутерска опрема, делови за градење на вградени системи, опрема за био-медицински и биоинформатички истражувања, опрема за градење асистивни технологии и др. Најголемиот дел од опремата е набавена со помош на повеќе македонски компании, дел од опремата е набавена преку проектите поддржани од оваа лабораторија, но и преку индивидуални донации.
-        </p>
-    </div>
-
-    <div class="main-segment-two themeChangeNormal">
-        <p class="Paragraph">
-            Целта на оваа лабораторија е да им овозможи на истражувачите да истражуваат напредни концепти од областа на интелигентните системи, како подобрување на перформансите на интелигентните системи, развој на алгоритми кои доведуваат до поинтелигентно однесување на вештачките системи, дигитално процесирање витални сигнали, биологизирање на вештачките системи, како воведување на концепти како емоции и самоучење кај вештачките системи, подобрување на алгоритмите кои се користат во биоинформатиката, надградување на живите суштества со хардверско – софтверски системи и др. Во оваа лабораторија се развиваат и хардверско - софтверски решенија за подобрување на асистивните технологии, преку интелигентно надградување на алатките кои би ги користеле специфични целни групи на луѓе, меѓу кои постари корисници, корисници со различни видови на физичка или ментална оневозможеност, дечиња со аутизам, деца со Даунов синдром, корисници од специфичен апликативен домен (како здравство, воени апликации) и  др.
-        </p>
-
+        <div class="project-segment-three-temp1">
         <div>
-            <img src="../../images-other/is-slika2.jpg">
-            <p>Слика 1 - Сензори и апликација во рамки на проектот SIARS</p>
+            <img src="maintenance-2422171_1280.jpg">
+        </div>
+        <div class="Paragraph">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolore magni sequi sint voluptatem! Accusantium ad asperiores commodi dolore dolorum, expedita explicabo fugiat, illo inventore laudantium nesciunt nostrum odit officia optio pariatur porro temporibus veniam! Adipisci aspernatur, consectetur doloribus eius expedita illum labore laboriosam laborum, nam obcaecati quaerat quas ratione. Aut debitis ipsam itaque. Aliquam aliquid aut autem distinctio dolor dolorum, eius, est fugiat ipsum magni maiores numquam officia quod sequi similique sit tempora ullam velit veniam voluptatibus? Commodi eaque, ex expedita ipsa itaque maiores natus nemo quam temporibus voluptas. Assumenda at excepturi illo laudantium maxime nemo non quam voluptatibus?</p>
         </div>
     </div>
+    </div>
 
-    <div class="main-segment-three">
-        <div class="image-stack-container">
-            <div class="image-wrapper-group">
-                <div class="image-wrapper ">
-                    <img src="../../images-other/is-picture1.jpg" alt="Image 1">
-                </div>
-                <div class="image-wrapper ">
-                    <img src="../../images-other/is-picture3.jpg" alt="Image 2">
-                </div>
-                <div class="image-wrapper ">
-                    <img src="../../images-other/ispicture4.jpg" alt="Image 3">
+    <!--End Card for extra information-->
+    <div class="EndCard themeChangeEnd">
+        <div class="Map-location">
+            <div class="MapContainer themeChangeNormal">
+                <h2 class="MapTitle">Каде е ФИНКИ?</h2>
+                <div class="Iframe-Container" style="position: relative;">
+                    <div style="position: relative; padding-bottom: 75%; height: 0; overflow: hidden;">
+                        <iframe class="Map" style="position: absolute; top: 2.5%; left: 2.5%; width: 95%; height: 90%; border: 2px solid black;" loading="lazy" allowfullscreen src="https://maps.google.com/maps?q=finki&z=17&output=embed"></iframe>
+                    </div>
+                    <a href="https://testosteronetherapy.org/" rel="noopener" target="_blank" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0;">testosteronetherapy.org</a>
                 </div>
             </div>
-
-            <p class="image-description">
-                Слика 2 - Дел од роботите во лабораторијата за интелигентни системи
-            </p>
         </div>
-
-        <div class="texts">
-            <p class="Paragraph">
-                Истражувачите кои во текот на годините истражувале во оваа лабораторија се дел од повеќе меѓународни проекти  преку коишто оваа лабораторија ги развивала своите  хардверски и софтверски решенија. Дел од нив се НАТО EAP.SFPP984753 – SIARS, НАТО  SPS, G5825 - SP4Life, Еразмус + проектот Синергија меѓу хуманоиден робот и личен мобилен уред како нов вид на интервентни алатки кај деца со аутизам (СМАРТ), билатералниот проект „ Објаснива вештачка интелигенција за примена на компјутерска визија во вградни системи“, како и повеќе национални проекти. НАТО проектите овозможија збогатување на лабораторијата со нови елементи, како што се пакетот e-Health Sensor Shield V2.0, биосензорот Zephyr Bioharnes3, сензор за мерење SPO2 итн, како и развивање повеќе апликации за телемедицински системи. Во проектот СМАРТ беше развиена алатка којашто ја поддржува терапијата на малите деца со аутизам која се одвива со помош на робот. Во оваа лабораторија направени се повеќе решенија за општествено  - одговорни  и здравствени организации, како „Отвори ги прозорците“, Детската клиника во Скопје и др.
-            </p>
-            <p class="Paragraph">
-                Истражувачите од лабораторијата за интелигентни системи го овозможиле изведувањето на повеќе школи и работилници. Дел од нив се DAAD школата за Роботика и Математика (2012), летниот камп по Основи на Роботика (2013) поддржан од Министерството за образование и наука, како и интензивниот курс по Когнитивна роботика (2015).
-            </p>
-        </div>
-    </div>
-
-    <!--        <div class="main-segment-four">-->
-    <!--            <img src="images-other/is-slika3.jpg">-->
-    <!--            <p class="Paragraph">-->
-    <!--                Слика 3 – Терапија за деца со аутизам, користење на асистивни апликации кои поддржуваат роботски елементи-->
-    <!--            </p>-->
-    <!--        </div>-->
-</div>
-
-<!--End Card for extra information-->
-<div class="EndCard themeChangeEnd">
-    <div class="Map-location">
-        <div class="MapContainer themeChangeNormal">
-            <h2 class="MapTitle">Каде е ФИНКИ?</h2>
-            <div class="Iframe-Container" style="position: relative;">
-                <div style="position: relative; padding-bottom: 75%; height: 0; overflow: hidden;">
-                    <iframe class="Map" style="position: absolute; top: 2.5%; left: 2.5%; width: 95%; height: 90%; border: 2px solid black;" loading="lazy" allowfullscreen src="https://maps.google.com/maps?q=finki&z=17&output=embed"></iframe>
+        <div class="ExtraInfo">
+            <div class="orientation">
+                <div class="EndCardLinks">
+                    <a class="prevent-select end-card-links" href="../../index.html">Дома</a>
+                    <a class="prevent-select end-card-links" href="../../projects.html">Проекти</a>
+                    <a class="prevent-select end-card-links" href="../../staff.html">Кадар</a>
                 </div>
-                <a href="https://testosteronetherapy.org/" rel="noopener" target="_blank" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0;">testosteronetherapy.org</a>
+
+                <div class="CreatorLinks">
+                    <a href="https://www.facebook.com/FINKI.ukim.mk/" class="fa fa-facebook"></a>
+                    <a href="https://x.com/FINKIedu" class="fa fa-twitter"></a>
+                    <a href="http://www.linkedin.com/company/faculty-of-computer-science-and-engineering---skopje" class="fa fa-linkedin"></a>
+                    <a href="http://www.youtube.com/user/FINKIedu" class="fa fa-youtube"></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="ExtraInfo">
-        <div class="orientation">
-            <div class="EndCardLinks">
-                <a class="prevent-select end-card-links" href="../../index.html">Дома</a>
-                <a class="prevent-select end-card-links" href="../../projects.html">Проекти</a>
-                <a class="prevent-select end-card-links" href="../../staff.html">Кадар</a>
-            </div>
-
-            <div class="CreatorLinks">
-                <a href="https://www.facebook.com/FINKI.ukim.mk/" class="fa fa-facebook"></a>
-                <a href="https://x.com/FINKIedu" class="fa fa-twitter"></a>
-                <a href="http://www.linkedin.com/company/faculty-of-computer-science-and-engineering---skopje" class="fa fa-linkedin"></a>
-                <a href="http://www.youtube.com/user/FINKIedu" class="fa fa-youtube"></a>
-            </div>
-        </div>
-    </div>
-</div>
-<a class="themeChange" href="https://github.com/duckpop" style="text-decoration: none">
-    <h1 class="EndCard CreatorTag themeChangeEnd">
-        Изработено од: Blagoja Stojev
-    </h1>
-</a>
+    <a class="themeChange" href="https://github.com/duckpop" style="text-decoration: none">
+        <h1 class="EndCard CreatorTag themeChangeEnd">
+            Изработено од: Blagoja Stojev
+        </h1>
+    </a>
 </body>
 </html>
-
